# Project_sdcc

./: readme.md
cmake_conf/: building_output.cmake
code/: CMakeLists.txt  main.cpp
code/comm/: CMakeLists.txt  basicComm.cpp  tcpComm.cpp
code/comm/include/: basicComm.h  tcpComm.h
code/pthreadt/: CMakeLists.txt  pthreadt.cpp
code/pthreadt/include/: pthreadt.h
code/rre/: rre.h  rre_errcode.h
comm/: basicComm.cpp  makefile  tcpComm.cpp  test.cpp
comm/api/: basicComm.h  tcpComm.h
